--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
     "rimraf": "^6.0.1",
     "validator": "^13.12.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.12"
+  }
 }
